Doctor dashboard - Scroll Added Doctor dashboard - sidebar icon alignment fixed and changed icon Doctor dashboard - Score trend chart screen optimized JIRA Bug 166 and 165

--- a/frontend/src/Doctor/Sidebar.css
+++ b/frontend/src/Doctor/Sidebar.css
@@ -213,3 +213,18 @@
   border-radius: 0.8rem;
 }
 
+@media (max-width: 800px) {
+
+body {
+  width: fit-content;
+}
+
+.main-content {
+  left: 0;
+}
+
+.sidebar {
+   display: none;
+}
+
+}
